# network-db-parsers

./: README.md  network-db-parsers.cabal
Data/NetworkDB/: HostsEntry.hs  NetgroupEntry.hs
Data/NetworkDB/Helpers/: ByLineParser.hs  CommentParser.hs
