-- documentation, see http://haskell.org/cabal/users-guide/

name:                network-db-parsers
version:             0.1.0.0
synopsis:            A tool to parse a hosts or netgroup file
description:         A tool to parse a hosts or netgroup file
license:             BSD3
license-file:        LICENSE
author:              Michael Jansen
maintainer:          mjansen@tpg.com.au
copyright:           Michael Jansen
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.NetworkDB.HostsEntry, Data.NetworkDB.NetgroupEntry
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base, bytestring, attoparsec
  -- hs-source-dirs:      
  default-language:    Haskell2010
